tests/NormalTests/paczka1/small_fuzzy/10355552.err
Error in line 3: Xke S670 54,1
Error in line 5: 3AyKwGU S670 48,8
Error in line 7: 3AyKwGU A416 0,1
Error in line 8: ur6m7 S670 46,3
Error in line 9: 3AyKwGU S670 48,3
Error in line 14: zIxrqBP1a4Z S411 1,2
